--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- 从SDK合并：权限与查询约束 -->
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.GET_CONTENT"/>
+            <category android:name="android.intent.category.OPENABLE"/>
+            <data android:mimeType="*/*"/>
+        </intent>
+        <intent>
+            <action android:name="android.media.action.IMAGE_CAPTURE"/>
+        </intent>
+    </queries>
+
     <application
         android:name="com.yuyan.BaseApplication"
         android:icon="@drawable/app_icon"
@@ -7,6 +20,7 @@
         android:largeHeap="true"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppTheme">
+        <!-- IME 服务 -->
         <service
             android:name="com.yuyan.imemodule.service.ImeService"
             android:exported="true"
@@ -19,6 +33,44 @@
                 android:name="android.view.im"
                 android:resource="@xml/method" />
         </service>
+
+        <!-- 从SDK合并：设置与启动入口 -->
+        <activity
+            android:name="com.yuyan.imemodule.ui.activity.SettingsActivity"
+            android:exported="true" />
+        <activity
+            android:name="com.yuyan.imemodule.ui.activity.LauncherActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.yuyan.imemodule.ui.setup.SetupActivity"
+            android:exported="false"
+            android:launchMode="singleTask" />
+        <activity
+            android:name="com.yuyan.imemodule.ui.fragment.theme.CustomThemeActivity"
+            android:configChanges="orientation|screenSize"
+            android:exported="false"
+            android:label="@string/edit_theme" />
+        <activity
+            android:name="com.yuyan.imemodule.libs.cropper.CropImageActivity"
+            android:exported="false"
+            android:theme="@style/Theme.CropActivityTheme"/>
+
+        <provider
+            android:name="com.yuyan.imemodule.libs.cropper.CropFileProvider"
+            android:authorities="${applicationId}.cropper.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/cropper_library_file_paths"/>
+        </provider>
     </application>
 
 </manifest>
