--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,3 +1,79 @@
-/build
-*.jks
+# Built application files
+*.apk
+*.aab
+*.aar
+*.ap_
+
+# Files for the ART/Dalvik VM
+*.dex
+
+# Java class files
+*.class
+
+# Generated files
+build/
+generated/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Proguard folder
+proguard/
+
+# Log Files
+*.log
+
+# Android Studio Navigation editor temp files
+.navigation/
+
+# Android Studio captures folder
+captures/
+
+# IntelliJ
 *.iml
+*.iws
+.out
+
+# Keystore files
+*.jks
+*.keystore
+
+# External native build folder
+.externalNativeBuild
+.cxx/
+
+# Google Services (e.g. APIs or Firebase)
+google-services.json
+
+# Crashlytics
+com_crashlytics_export_strings.xml
+crashlytics-build.properties
+
+# APK Expansion Files
+*.obb
+
+# Android Profiling
+*.hprof
+
+# Firebase
+google-services.json
+google-services-desktop.json
+
+# Project specific ignores
+release/
+debug/
+outputs/
+kotlin/
+kotlinToolingMetadata/
+kspCaches/
+tmp/
+.cxx/
+.externalNativeBuild/
+captures/
+.gradle/
+
+# Ignore Rime build files
+src/main/assets/rime/build/
+
+# Ignore local keystore properties
+../keystore/keystore.properties
